public/assets/css/styles.css
/* utility classes */
:root {
  --primary-color: ;
  --secondary-color: ;
  --primary-color-transparent: ;
}

/* Font for logo, titles, and buttons */
.nanum-gothic-coding-regular {
    font-family: "Nanum Gothic Coding", monospace;
    font-weight: 400;
    font-style: normal;
  }

/* index.html and nav style */
* {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  align-items: left;
  font-size: 16px;
  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  background-image: url(../images/bg-1.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  color: white;
}

nav{
  width: 100%;
}

.about-us-btn,
.search-btn {
  background-color: rgb(19, 18, 66);
  border: none;
  color: white;
}

.about-us-btn:hover,
.search-btn:hover {
  box-shadow: 0 0 10px 1px #48abe0;
  background-color: rgb(19, 18, 66, .9);
}

h1 {
  font-size: 51px;
}

.welcome-header {
  text-align: center;
  margin: 15px;
  padding: 15px;
  letter-spacing: 2px;
}

h2 {
  font-size: 26px;
}

.connect-header {
  text-align: center;
  letter-spacing: 2px;
  padding-bottom: 60px;
}

.sign-up-card,
.sign-in-card {
  height: 260px;
  background-color: rgb(19, 18, 66, .9);
  color: white;
  box-shadow: 0 0 50px 10px #48abe0;
}

.sign-in-btn {
  background-color: #39b6f0;
  color: white;
  border: none;
}

.sign-up-btn {
  background-color: rgb(83, 138, 83);
  border: none;
}

.sign-in-btn:hover {
  background-color: rgb(75, 118, 138, .7);
  box-shadow: 0 0 30px 5px #48abe0;
}

.sign-up-btn:hover{
  background-color: rgb(83, 138, 83, .7);
  box-shadow: 0 0 30px 5px #48abe0;
}
.card-title {
  font-size: 26px;
  padding-bottom: 20px;
  padding-top: 20px;
}

.card-text {
  line-height: 1.4;
  padding-bottom: 20px;
  font-size: 19px;
}

/* sign-in and dsign-up pages styling */
.sign-in-page-card,
.sign-up-page-card {
  margin-top: 50px;
  margin-right: 50px;
  margin-left: 50px;
}

.sign-up-page-card{
  height: 425px;
}

.other-page-message {
 padding-top: 25px;
 font-size: 14px;
}

.other-page-link {
 text-decoration: none;
 color: #39b6f0;
}

.other-page-link:hover {
  color: #39b6f0c6;
}

.sign-page-header {
  padding-top: 40px;
  padding-bottom: 30px;
}

/* Homepage styling */
.sidebar {
  width: 100%;
}

.btn-toggle:hover {
  color: #39b6f0;
}

.link-dark {
  text-decoration: none;
  margin-left: 20px;
  line-height: 1.5;
}

/* About me page styling */

.card-content {
  width: 90%;
  margin: 10% auto;
  padding: 30px;
  height: 75%;
  background-color: rgba(19, 18, 66, 0.959);
  color: white;
  box-shadow: 0 0 50px 10px #48abe0;
}

